# island-rampage

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  realignment_plan.md
.agent/skills/asset-manager/: SKILL.md
.agent/skills/bevy-architect/: SKILL.md
.agent/skills/game-math-physicist/: SKILL.md
.agent/skills/rust-expert/: SKILL.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
assets/textures/roads/: README.md
src/: main.rs
src/ai/: combat.rs  components.rs  config.rs  cover.rs  decision.rs  lifecycle.rs  mod.rs  movement.rs  perception.rs  squad.rs  systems.rs  tests.rs
src/ai/components/: combat.rs  mod.rs  movement.rs  perception.rs  resources.rs  state.rs
src/audio/: components.rs  integration.rs  mod.rs  systems.rs
src/camera/: constants.rs  mod.rs  systems.rs  tests.rs
src/combat/: components.rs  cover.rs  damage.rs  explosives.rs  health.rs  killcam.rs  mod.rs  ragdoll.rs  shooting.rs  tests.rs  vehicle_shooting.rs  visuals.rs  weapon.rs
src/combat/damage/: calculation.rs  death.rs  effects.rs  mod.rs  reactions.rs
src/combat/explosives/: effects.rs  explosion.rs  mod.rs  systems.rs
src/combat/shooting/: auto_aim.rs  effects.rs  firing.rs  input.rs  melee.rs  mod.rs
src/combat/tests/: combat_mechanics_tests.rs  health_armor_tests.rs  mod.rs  weapon_tests.rs  weapon_types_tests.rs
src/core/: camera.rs  events.rs  math.rs  mod.rs  pool.rs  resources.rs  spatial_hash.rs  state.rs  weather.rs
src/economy/: casino.rs  components.rs  enterprise.rs  mod.rs  stock_market.rs  systems.rs  tests.rs
src/environment/: components.rs  mod.rs  systems.rs
src/mission/: advanced_missions.rs  cutscene.rs  cutscene_systems.rs  data.rs  dialogue.rs  dialogue_actions.rs  dialogue_systems.rs  dialogue_ui.rs  economy.rs  mission_generator.rs  mod.rs  relationship.rs  side_dialogue_data.rs  side_dialogues.rs  side_missions.rs  story_data.rs  story_manager.rs  story_manager_data.rs  story_systems.rs  systems.rs  trigger.rs  unlocks.rs
src/mission/story_data/: conditions.rs  mission.rs  mod.rs  objectives.rs  performance.rs  phases.rs  rewards.rs  types.rs
src/mission/story_systems/: mission_markers.rs  mod.rs  objective_tracking.rs  trigger_handler.rs
src/pedestrian/: behavior.rs  components.rs  mod.rs  panic.rs  pathfinding.rs  swimming.rs  systems.rs
src/pedestrian/components/: animation.rs  appearance.rs  collision.rs  (+4 more)
src/player/: character_switch.rs  character_switch_animation.rs  climb.rs  components.rs  config.rs  mod.rs  skills.rs  swimming.rs  systems.rs  vehicle_transition.rs
src/save/: components.rs  mod.rs  save_loader.rs  systems.rs  tests.rs
src/ui/: components.rs  constants.rs  crosshair.rs  damage_indicator.rs  delivery_app.rs  enemy_health_bars.rs  fps_counter.rs  gps_navigation.rs  hud.rs  init.rs  interaction_prompt.rs  loading_screen.rs  minimap.rs  mod.rs  mod_shop.rs  notification.rs  pause_menu.rs  phone.rs  phone_apps.rs  phone_apps_stock.rs  phone_tests.rs  save_slot_ui.rs  screen_effect.rs  setup_hud.rs  setup_map.rs  setup_menu.rs  story_mission_hud.rs  systems.rs  tests.rs  weapon_wheel.rs  weather_hud.rs
src/vehicle/: components.rs  config.rs  effects.rs  mod.rs  modifications.rs  npc_ai.rs  spawning.rs  systems.rs  theft.rs  theft_ui.rs  traffic_lights.rs  vehicle_damage.rs  vehicle_physics.rs  watercraft.rs
src/wanted/: arrest.rs  components.rs  config.rs  debug_viz.rs  events.rs  mod.rs  police_helicopter.rs  roadblock.rs  systems.rs  tests.rs
src/world/: characters.rs  components.rs  constants.rs  destructible.rs  destruction_effects.rs  entity_naming.rs  interior.rs  mod.rs  random_events.rs  roads.rs  setup.rs  street_furniture.rs  time_weather.rs
(+62 files in other folders)
