[package]
name = "island-rampage"
version = "0.1.0"
edition = "2021"
description = "島嶼狂飆 - 台灣開放世界遊戲 | Taiwan Open World Game"
license = "LicenseRef-Proprietary"
authors = ["Neal Chen"]
keywords = ["game", "taiwan", "open-world", "bevy"]

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking", "jpeg"] }  # Bevy 0.17 穩定版
bevy_rapier3d = "0.32"  # 對應 Bevy 0.17

# === 開發工具（Debug 模式自動移除）===
bevy-inspector-egui = { version = "0.35", optional = true }  # 即時編輯器

rand = "0.9"  # 隨機數生成
serde = { version = "1.0", features = ["derive"] }  # 序列化（存檔系統）
serde_json = "1.0"  # JSON 格式存檔
dirs = "6.0"  # 跨平台目錄路徑
futures-lite = "2.5"  # 非同步任務輪詢

# === Features ===
[features]
default = []  # Release 乾淨建置；開發時用 cargo run --features dev_tools
dev_tools = [
    "bevy-inspector-egui",
]

# 開發時的編譯優化（讓遊戲跑得動，但編譯較快）
[profile.dev]
opt-level = 1

# 依賴套件用最高優化（Bevy 本身需要優化才能流暢運行）
[profile.dev.package."*"]
opt-level = 3

# === Lint 政策 ===
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Bevy ECS 假陽性
needless_pass_by_value = "allow"       # Bevy 系統要求 Res<T>/Query 按值傳遞
trivially_copy_pass_by_ref = "allow"   # ECS 模式中 &f32 參數常見
# 遊戲數學
float_cmp = "allow"                    # 遊戲中 == 0.0、>= 1.0 是刻意的
cast_precision_loss = "allow"          # u32 as f32 等是刻意的
cast_possible_truncation = "allow"     # 同上
cast_sign_loss = "allow"              # 同上
# Bevy 慣例
wildcard_imports = "allow"             # use bevy::prelude::* 是 Bevy 慣例
module_name_repetitions = "allow"      # Bevy 模組命名慣例
doc_markdown = "allow"                 # 遊戲術語不需要 backticks
# 遊戲狀態結構
cast_possible_wrap = "allow"           # 遊戲中 usize→i32 是刻意的
struct_excessive_bools = "allow"       # 遊戲狀態結構需要多個布林值
similar_names = "allow"                # 遊戲變數名稱自然相似（pos/pois 等）
# 已有壓制（從 main.rs 移入統一管理）
too_many_arguments = "allow"
type_complexity = "allow"

# 發布版本的優化
[profile.release]
lto = "thin"
codegen-units = 1
